16.05 homework Добавил базу с настройками, реализовал использование этих настроек в работе клиента\сервера. Реализовал прием\отправку больших файлов, ByteBuffer по 5 Мб. В целом все готово, осталось навести порядок.