@@ -5,16 +5,22 @@ import io.netty.channel.ChannelInboundHandlerAdapter;
 import service.ServiceMessages;
 import service.serializedClasses.*;
 
-import java.io.FileOutputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.RandomAccessFile;
+import java.nio.ByteBuffer;
+import java.nio.channels.FileChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 public class ServerHandler extends ChannelInboundHandlerAdapter {
+    private static final Map<String, FileChannel> mapFileChannel = new HashMap<>();
+    private final Controller controller;
 
-    private Controller controller;
 
     public ServerHandler(Controller controller) {
         this.controller = controller;
@@ -27,11 +33,20 @@ public class ServerHandler extends ChannelInboundHandlerAdapter {
             controller.setAuthenticated(true);
             ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), ""));
             return;
-        } else if (responseText.equals(ServiceMessages.AUTH_NO)) {
-            controller.textArea.appendText("Неверный логин / пароль\n");
+        } else if (responseText.startsWith(ServiceMessages.CONF_MAXDEPTH)) {
+            controller.setMaxDepth(Integer.parseInt(responseText.split(":")[1]));
             return;
-        } else if (responseText.startsWith(ServiceMessages.REG_OK) ||
-                    responseText.startsWith(ServiceMessages.REG_NO)) {
+        } else if (responseText.equals(ServiceMessages.AUTH_NO)) {
+            controller.textArea.appendText("Неверный логин / пароль.\n");
+            return;
+        } else if (responseText.equals(ServiceMessages.AUTH_ALR)) {
+            controller.textArea.appendText("Под таким логином уже зашли в программу.\n");
+            return;
+        } else if (responseText.equals(ServiceMessages.EXCESS_Q)) {
+            controller.getAlertQuota();
+            return;
+        } else if (responseText.equals(ServiceMessages.REG_OK) ||
+                    responseText.equals(ServiceMessages.REG_NO)) {
             controller.getRegController().regStatus(responseText);
             return;
         } else if ("returnFileList".equals(responseText)) {
@@ -41,40 +56,16 @@ public class ServerHandler extends ChannelInboundHandlerAdapter {
             controller.getServerPC().updateList(getFileListResponse.getSubDirection(), fileList);
             return;
         } else if ("uploadFile".equals(responseText)) {
-            UploadFileResponse uploadFileResponse = (UploadFileResponse) response;
-            try {
-                System.out.println(uploadFileResponse.getLocalPath());
-                Path path = Path.of(uploadFileResponse.getLocalPath());
-                if (uploadFileResponse.getFileInfo().getType().getName().equals("D")){
-                    Files.createDirectories(path);
-                } else {
-                    FileOutputStream fos = new FileOutputStream(path.toString());
-                    fos.write(uploadFileResponse.getFile());
-                    fos.close();
-                }
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+            if (getServerFile((FileResponse ) response)){
+                controller.getLocalPC().updateList(Paths.get(controller.getLocalPC().getCurrentPath()));
             }
-            controller.getLocalPC().updateList(Paths.get(controller.getLocalPC().getCurrentPath()));
             return;
         } else if ("moveFile".equals(responseText)) {
-            MoveFileResponse moveFileResponse  = (MoveFileResponse ) response;
-
-            try {
-                System.out.println(moveFileResponse.getLocalPath());
-                Path path = Path.of(moveFileResponse.getLocalPath());
-                if (moveFileResponse.getFileInfo().getType().getName().equals("D")){
-                    Files.createDirectories(path);
-                } else {
-                    FileOutputStream fos = new FileOutputStream(path.toString());
-                    fos.write(moveFileResponse.getFile());
-                    fos.close();
-                }
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+            if (getServerFile((FileResponse ) response)){
+                getServerFile((FileResponse ) response);
+                controller.getLocalPC().updateList(Paths.get(controller.getLocalPC().getCurrentPath()));
+                ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), controller.getServerPC().getCurrentPath()));
             }
-            controller.getLocalPC().updateList(Paths.get(controller.getLocalPC().getCurrentPath()));
-            ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), controller.getServerPC().getCurrentPath()));
             return;
         } else if ("delFile".equals(responseText)) {
             ctx.writeAndFlush(new GetFileListRequest(controller.getLogin(), controller.getPassword(), controller.getServerPC().getCurrentPath()));
@@ -85,13 +76,42 @@ public class ServerHandler extends ChannelInboundHandlerAdapter {
         }
     }
 
-    private String getPathWithoutFile(String path){
-        Path p = Paths.get(path).getParent();
-        if (p != null) {
-            return p.toString();
-        } else {
-            return "";
+    private FileChannel getFileChannel(String path) throws FileNotFoundException {
+        FileChannel fileChannel = mapFileChannel.get(path);
+        if (fileChannel == null) {
+            RandomAccessFile fileForSend = new RandomAccessFile(path, "rw");
+            fileChannel = fileForSend.getChannel();
+            mapFileChannel.put(path, fileChannel);
         }
+        return fileChannel;
+    }
+
+    private boolean getServerFile(FileResponse response){
+        try {
+            Path path = Path.of(response.getLocalPath());
+            if (response.getFileInfo().getType().getName().equals("D")){
+                Files.createDirectories(path);
+            } else {
+                ByteBuffer byteBuffer = ByteBuffer.wrap(response.getFile());
+                FileChannel fileChannel = null;
+                if (byteBuffer.hasRemaining()){
+                    fileChannel = getFileChannel(path.toString());
+                    fileChannel.write(byteBuffer);
+                    byteBuffer.clear();
+                }
+
+                if (response.getFileInfo().getSize() == Files.size(path)){
+                    if (fileChannel != null) {
+                        fileChannel.close();
+                    }
+                    mapFileChannel.remove(path.toString());
+                    return true;
+                }
+            }
+        } catch (IOException e) {
+            throw new RuntimeException();
+        }
+        return false;
     }
 
     @Override
